# zipfai

./: LICENSE  Makefile  README.md  pyproject.toml
tests/unit/: test_simple.py
